--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "online-store",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "8.12.0"
+  },
   "dependencies": {
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
